--- a/css/master.css
+++ b/css/master.css
@@ -14,6 +14,25 @@ body {
     background: transparent;
 }
 
+.homepage_table_margin_td {
+    height: 100%;
+    width: 20%;
+    background: transparent;
+}
+
+#homepage_input_id, #homepage_input_session {
+    font-size: large;
+    height: 100%;
+    width: 50%;
+    margin-top: 15px;
+}
+
+#homepage_button {
+    margin-top: 15px;
+    font-size: large;
+    width: 120px;
+}
+
 .table_margin_td {
     height: 100%;
     width: 10%;
@@ -27,6 +46,7 @@ body {
 
 #heading_homepage {
     font-family: arial, sans serif;
+    text-align: center;
 
 }
 
@@ -34,6 +54,7 @@ body {
     font-family: arial, sans serif;
     font-style: italic;
     color: grey;
+    text-align: center;
 }
 
 .chat_main_table {
@@ -43,6 +64,10 @@ body {
     height: 100%;
     width: 100%;
     background: white;
+}
+
+#homepage_inputs {
+    text-align: center;
 }
 
 .msg_tr {
