--- a/css/master.css
+++ b/css/master.css
@@ -40,7 +40,7 @@ img {
 .chat_main_table {
     position: fixed;
     top: 0px;
-white    z-index: 100;
+    z-index: 100;
     height: 100%;
     width: 100%;
     background: white;
